compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_cyrillic_p.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2247
expression: "pub fn main() { р }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { р }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { р }
  │                 ^ Unexpected character

This looks like ascii latin letter p, but it is actually the unicode
Cyrillic letter р.
